fixed spacing on sidemenu

--- a/CSS/styles.scss
+++ b/CSS/styles.scss
@@ -134,11 +134,12 @@ html,body {
   span.speechBubble {
     transition: .4s ease-in-out;
     position: absolute;
-    left: 300px;
+    left: 260px;
     width: 200px;
     height: 100px;
     background: #fff;
-    border-radius: 50px;
+    border-radius: 20px;
+    filter: drop-shadow(2px 2px 4px hsl(0, 0%, 10%));
     h2 {
       height: 100px;
       display: flex;
@@ -147,13 +148,13 @@ html,body {
     }
     .triangle {
       position: absolute;
-      top: 75px;
+      top: 80px;
       left: -15px;
       transform: rotate(48deg);
       width: 0;
       height: 0;
       border-left: 20px solid transparent;
-      border-right: 25px solid transparent;
+      border-right: 20px solid transparent;
       border-top: 30px solid #fff;
     }
   }
@@ -334,7 +335,7 @@ span.face.blink:before, span.face.blink:after{
         text-align: left;
         li {
           list-style: none;
-          padding: 5px;
+          padding: 20px;
           a {
             text-transform: uppercase;
             text-decoration: none;
